# neograph

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  amplify.yml  pyproject.toml
.beads/: .migration-hint-ts  issues.jsonl
.claude/agents/: architect.md  executor.md  qc-validator.md  req-analyst.md  review-architecture.md  review-consistency.md  review-dry.md  review-execution-excellence.md  review-layering.md  review-python-practices.md  review-security.md  review-testing.md  reviewer.md  validator.md
.claude/code-review/: test-audit-spec.md
.claude/commands/: code-review.md  team.md
.claude/research/: dx_research_040426.md
.github/workflows/: publish.yml
.hypothesis/constants/: 067c8281f51df091  0b7c19a575cd815b  0edd6cce7bdd696c  0fbb3724c65d7550  14a7fa36d99be7e0  166f01998b728ba3  1cbdebc304c466b2  200e30989d7cb541  20c922a1f8e196e1  23eb4249e9102f68  261937e85811ba53  30804c1ea4123f0c  342e6b1ae26a71e5  373f909e1a24a727  46aa33f9e5fdf3b8  4c26ea5ee07a94bd  4d32023d1f42a669  4d5fa1ea9678af21  6100d6e8cafb0211  61323000f8c49494  6a4c4dfeee3d8f61  6f98278976952825  72280f0625600b26  72bf9dc06c5a05ed  74397cf578871912  8e5f891095273c11  981257eb2f283ed0  98a78040b37fac42  9b10e3c9ddd57593  9b8b34a258824dce  9cb40e9e912d3310  a29cbd0aa5f48170  a3506a29df65abab  a6b48aab8c5c4320  a6d4bc4dfbae1a0d  b43c1ccc065ce7f6  c5d52656dd94bfd3  cb278280bcac2480  d23f1de74f726e57  d6539d6508124f76  (+12 more)
docs/design/: agent-spec-interop-2026-07-09.md  agent-spec-ratification-2026-07-13.md  any-audit-analysis-2026-05-20.md  architecture-decisions-2026-05-01.md  architecture-decisions.md  architecture-review-async-streaming-mcp-2026-07-02.md  architecture-review-incidental-complexity-2026-06-02.md  architecture-review-simplicity-abstraction-2026-06-02.md  architecture-review-solid-grasp-2026-06-02.md  architecture-review-synthesis-2026-06-02.md  architecture-v2-review.md  architecture-v2.md  async-streaming-mcp-hitl-2026-07-02.md  backend-abstraction.md  code-review-remediation-2026-07-13.md  construct-from-module-silent-drop-2026-07-10.md  do0d9-parent-scoped-bubbleup-2026-07-23.md  dsml-recovery-fix-2026-05-20.md  durable-execution-replay-research-2026-07-02.md  dynamic-handoff-2026-07-13.md  dynamic-handoff-research-2026-07-13.md  fan-over-agent-node-2026-07-07.md  forwardconstruct-expressiveness-parity-2026-07-10.md  god-module-analysis-2026-05-20.md  handoff-2026-04-29.md  hgpt-refined-design-2026-07-06.md  ir-item-dispatch-2026-06-04.md  ir-item-dispatch-ddd-2026-06-04.md  ir-item-dispatch-pragmatic-2026-06-04.md  ir-item-dispatch-solid-grasp-2026-06-04.md  keymaker-decision-log-2026-07-13.md  keymaker-design-review-2026-07-13.md  langgraph-output-schema-research-2026-07-03.md  loop-history-archaeology-2026-07-11.md  mcp-connection-reuse-2026-07-10.md  mcp-identity-refresh-2026-07-11.md  mcp-resources-patterns-2026-07-06.md  mcp-session-api-2plcl-2026-07-10.md  mcp-session-ownership-review-2026-07-05.md  migration-v2.md  (+15 more)
examples/: 01_scripted_pipeline.py  01b_scripted_pipeline_decorator.py  01c_decorator_fan_in.py  02_produce_and_gather.py  03_oracle_ensemble.py  04_each_fanout.py  05_subgraph_composition.py  06_raw_node_escape_hatch.py  07_llm_configuration.py  08_structured_output_coercion.py  09_operator_human_in_loop.py  10_full_pipeline.py  11_pipeline_metadata_and_prompts.py  12_input_rendering.py  13_gather_produce_subconstruct.py  13b_mcp_tools.py  14_context_injection.py  15_loop_refinement.py  16_project.yaml  16_security_analysis.yaml  16_spec_driven_pipeline.py  17_fanout_resilience.py  18_typed_projections.py  19_checkpoint_auto_resume.py  20_oracle_merge_hooks.py  21_multimodal_vision.py  22_image_security.py  23_mcp_client_selective_binding.py  24_mcp_resources_from_resource.py  25_mcp_single_tool_gateway.py  26_mcp_composite_session.py  27_forward_agent_wiring.py  28_keymaker_swarm.py  28_portal_swarm.py  29_keymaker_dynamic_flow.py  29_portal_dynamic_flow.py  30_hot_swap_agent_spec.py  31_agent_spec_each_oracle_loop.py  README.md  _mcp_demo_server.py  (+2 more)
examples/code-review/: pipeline.py  requirements.md  schemas.py
examples/incident-triage/: requirements.md
examples/lead-outreach/: pipeline.py  quality_gate.py  requirements.md  schemas.py
examples/lead-research/: pipeline.py  requirements.md  schemas.py
examples/rfp-response/: requirements.md
examples/spec-builder/: pipeline.py  requirements.md  schemas.py
examples/vs_langgraph/: 01_sequential_pipeline.py  02_tool_agent.py  03_map_reduce.py  04_human_in_the_loop.py  05_subgraph.py
scripts/: gen_api_manifest.py  regen_schema.py
src/neograph/: __init__.py  __main__.py  _agent_cycle.py  _agent_output_schema_preamble.py  _agent_spec.py  _compiled.py  _config_carrier.py  _construct_builder.py  _construct_graph.py  _construct_validation.py  _content_blocks.py  _dev_warnings.py  _di_classify.py  _dispatch.py  _dsml.py  (+71 more)
tests/: _mcp_oauth_demo_server.py  conftest.py  fakes.py  schemas.py  schemas_compat.py  test_agent_cycle_run_cache.py  test_agent_parallel_tools_async.py  test_agent_spec_export.py  test_agent_spec_import.py  test_agent_spec_operator_export_doc.py  test_agent_spec_roundtrip.py  test_agent_spec_types.py  test_agent_subgraph_keystone.py  test_agent_tool_config_propagation.py  test_async_concurrency.py  test_async_dual_path.py  test_async_fakes.py  test_async_harness.py  test_async_llm_tool.py  test_async_observability.py  test_async_perf.py  test_async_runner.py  test_branch_arm_checkpointer.py  test_branch_arm_iter_nodes.py  test_branch_arm_noniter_walks.py  test_callback_protocols.py  test_check_fixtures.py  test_checkpoint_auto_rewind.py  test_checkpoint_keymaker.py  test_checkpoint_portal.py  test_checkpoint_resume.py  test_checkpoint_resume_transitive.py  test_checkpoint_sqlite_async.py  test_cli.py  test_compile_prompt.py  test_composition.py  test_conditions.py  test_config_carrier.py  test_construct_validation_merge_hooks.py  test_context_validation.py  (+116 more)
website/: api-symbols-ignore.json  astro.config.mjs  package-lock.json  package.json
(+408 files in other folders)
