[project]
name = "neograph"
version = "0.5.0"
description = "Write Python. Get a production LLM graph. Declarative LLM graph compiler that compiles @node-decorated functions into LangGraph."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Konstantin Mirin", email = "konstantin@mirin.pro"},
]
keywords = ["llm", "langgraph", "declarative", "typed", "pipeline", "graph", "compiler", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "langgraph>=1.1,<2.0",
    "langgraph-checkpoint>=4.0,<5.0",
    "langchain-core>=1.2,<2.0",
    "structlog>=23.0",
    "jsonschema>=4.26.0",
    "json-repair>=0.30",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=3.0"]
# neograph-g4q9: MCP examples (23/24) exercise the REAL Model Context Protocol
# over stdio against examples/_mcp_demo_server.py. NOT core deps — src/neograph
# stays MCP-free (the no-session-ownership guard scans src/ only; consumer-side
# client stitching is itself the demo's thesis). Run with:
#   uv run --extra mcp-examples pytest tests/test_mcp_examples_e2e.py
mcp-examples = [
    "langchain-mcp-adapters>=0.3",
    # <2 pin: mcp 2.0 renames FastMCP -> MCPServer; the demo server and
    # langchain-mcp-adapters 0.3.x both target the mcp 1.x FastMCP import.
    "mcp>=1.28,<2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
neograph = "neograph.__main__:main"

[project.urls]
Homepage = "https://neograph.pro"
Documentation = "https://neograph.pro"
Repository = "https://github.com/KonstantinMirin/neograph"
Issues = "https://github.com/KonstantinMirin/neograph/issues"
Changelog = "https://github.com/KonstantinMirin/neograph/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neograph"]

[tool.hatch.build.targets.sdist]
include = [
    "src/neograph",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "tests",
    "examples",
    "website",
    ".claude",
    ".beads",
    "docs",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-level import not at top (deferred imports for circular dep avoidance)
    "E741",   # ambiguous variable name (n, l are conventional in this codebase)
    "F841",   # local variable assigned but never used (common in side-effect tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011"]  # assert False is used in structural guards
"src/neograph/__init__.py" = ["F401"]  # re-exports

[tool.ruff.lint.isort]
known-first-party = ["neograph"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# neograph-w74k.1 (Phase 0): async collection for the dual-surface harness.
# 'auto' treats bare `async def test_*` as asyncio without per-test markers
# (safe: zero existing async tests, so nothing is reclassified). The explicit
# fixture loop scope silences the pytest-asyncio deprecation warning and avoids
# a future warnings-as-error surprise.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Node '.*'.*single-type inputs:DeprecationWarning",
]
markers = [
    "perf: marks async/sync per-node overhead perf gates (neograph-w74k.2.6 Phase 1f)",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.12",
    "langchain>=1.0",
    "langchain-openai>=1.2.2",
    "langfuse>=3.0",
    # neograph-w74k.2.5 (Phase 1e): file-backed Sqlite savers for the async
    # checkpointer + mixed-driver resume + crash-recovery E2Es. In the default
    # dependency-group (installed by `uv sync` / `uv run pytest`) — NOT an
    # optional extra — so the async checkpoint test file collects. Dev-only:
    # neograph core stays sqlite-free.
    "langgraph-checkpoint-sqlite>=3.1",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
]
